# jwtserver

./: .gitignore  .stignore  Cargo.toml  PASSKEY_README.md  README.md  cross-domain-login-example.html  generate_keys.sh  jwt_public.pem  passkeys.json  private.pem  requests.rest  secret.key  users.txt
.stfolder/: syncthing-folder-ce8c2d.txt
src/: main.rs
static/: dashboard.html  login.html
user_manager/: Cargo.toml  README.md
user_manager/src/: main.rs
