[package]
name = "jwtserver"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
dotenv = "0.15"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
anyhow = "1.0"
actix-files = "0.6"
